# haushaltsserver

./: .gitignore  Cargo.toml  Rocket.toml  data.json  zustande.json
private/: pending.json
src/: main.rs  notificationservice.rs
static/: Haushaltsplan0_1-621e976d29946c8d.js  example.json  index.html  style-3e72bfed36b0fe1d.css  zustande.json
templates/: base.html.tera  chore_excuse.html.tera  keyexpired.html.tera  loginfirst.html.tera
templates/email/: pendingrequest.html.tera  sauberpolizei.html.tera
