[package]
name = "haushalts_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json", "tls"] }
#rocket_contrib = "0.4.11"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = "1.23.0"

sqlx = { version = "0.5.7", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono", "json"] }
rand = "0.8.5"
lettre_email = "0.9.4"
imap = "2.4.1"
native-tls = "0.2.11"
lettre = { version = "0.10.0-beta.2", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname",  "builder"] }
tracing-subscriber = "0.3.16"
tera = "1.18.1"
chrono = "0.4.24"


[dependencies.rocket_auth]
version = "0.4.0"
features = ["sqlx-sqlite"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars", "tera"]
